// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row applies default styling by default 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row>
  <Row__StyledRow
    focused={false}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c-table__row c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;

exports[`Row applies focused styling if provided 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row
  focused={true}
>
  <Row__StyledRow
    focused={true}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c-table__row is-focused c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;

exports[`Row applies group styling if provided 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row
  group={true}
>
  <Row__StyledRow
    focused={false}
    group={true}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c-table__row c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;

exports[`Row applies header styling if provided 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row
  header={true}
>
  <Row__StyledRow
    focused={false}
    header={true}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c-table__row c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;

exports[`Row applies hovered styling if provided 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row
  hovered={true}
>
  <Row__StyledRow
    focused={false}
    hovered={true}
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="c-table__row is-hovered c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;

exports[`Row applies selected styling if provided 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row
  selected={true}
>
  <Row__StyledRow
    focused={false}
    onBlur={[Function]}
    onFocus={[Function]}
    selected={true}
  >
    <div
      className="c-table__row is-selected c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      selected={true}
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;

exports[`Row applies striped styling if provided 1`] = `
.c0 {
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  height: auto !important;
}

<Row
  striped={true}
>
  <Row__StyledRow
    focused={false}
    onBlur={[Function]}
    onFocus={[Function]}
    striped={true}
  >
    <div
      className="c-table__row c-table__row--stripe c0"
      data-garden-id="tables.row"
      data-garden-version="version"
      onBlur={[Function]}
      onFocus={[Function]}
      role="row"
      tabIndex={-1}
    />
  </Row__StyledRow>
</Row>
`;
